[gd_scene format=4 uid="uid://cokl1i7ese6oh"]

[ext_resource type="Script" uid="uid://biiia1p2rsxxy" path="res://scripts/basic_room.gd" id="1_ax6gf"]
[ext_resource type="PackedScene" uid="uid://bbm4ndoo46aj4" path="res://scenes/door.tscn" id="3_y5uxw"]
[ext_resource type="TileSet" uid="uid://diggcexa3u7t0" path="res://data/tile_set.tres" id="4_xxtbc"]
[ext_resource type="Texture2D" uid="uid://hchuiuep7anv" path="res://assets/textures/pointlight.webp" id="4_yh23c"]

[node name="BasicRoomScene" type="Node2D" unique_id=1917625330 node_paths=PackedStringArray("spawn_point")]
script = ExtResource("1_ax6gf")
spawn_point = NodePath("SpawnPoint")

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=1802097535]
position = Vector2(125, 124)
color = Color(1, 0.53, 0.53, 1)
energy = 0.71
shadow_item_cull_mask = 0
texture = ExtResource("4_yh23c")
texture_scale = 1.31

[node name="SpawnPoint" type="Marker2D" parent="." unique_id=481616159]
position = Vector2(124, 125)

[node name="CanvasModulate" type="CanvasModulate" parent="." unique_id=1230304508]
color = Color(0.02745098, 0.07450981, 0.09019608, 1)

[node name="Wall" type="TileMapLayer" parent="." unique_id=517110431]
tile_map_data = PackedByteArray("AAADAAMAAQANAAAAAAAEAAMAAQAOAAAAAAAFAAMAAQAOAAAAAAAGAAMAAQAOAAAAAAAHAAMAAQAOAAAAAAAIAAMAAQAOAAAAAAAJAAMAAQAOAAAAAAAKAAMAAQAOAAAAAAALAAMAAQAOAAAAAAAMAAMAAQAOAAAAAAANAAMAAQAOAAAAAAAOAAMAAQAOAAAAAAAPAAMAAQAOAAAAAAAQAAMAAQAOAAAAAAARAAMAAQAOAAAAAAASAAMAAQAOAAAAAAATAAMAAQAOAAAAAAAUAAMAAQAOAAAAAAAVAAMAAQAOAAAAAAAWAAMAAQAOAAAAAAAXAAMAAQAOAAAAAAAYAAMAAQAOAAAAAAAZAAMAAQAOAAAAAAAaAAMAAQAOAAAAAAAbAAMAAQAPAAAAAAAbAAQAAQAPAAEAAAAbAAUAAQAPAAEAAAAbAAYAAQAPAAEAAAAbAAcAAQAPAAEAAAAbAAgAAQAPAAEAAAAbAAkAAQAPAAEAAAAbAAoAAQAPAAEAAAAbAAsAAQAPAAEAAAAbAAwAAQAPAAEAAAAbAA0AAQAPAAEAAAAbAA4AAQAPAAEAAAAbAA8AAQAPAAEAAAAbABAAAQAPAAEAAAAbABEAAQAPAAEAAAAbABIAAQAPAAEAAAAbABMAAQAPAAEAAAAbABQAAQAPAAEAAAAbABUAAQAPAAEAAAAbABYAAQAPAAEAAAAbABcAAQAPAAEAAAAbABgAAQAPAAEAAAAbABkAAQAPAAEAAAAbABoAAQAPAAEAAAAaABsAAQAOAAIAAAAZABsAAQAOAAIAAAAYABsAAQAOAAIAAAAXABsAAQAOAAIAAAAWABsAAQAOAAIAAAAVABsAAQAOAAIAAAAUABsAAQAOAAIAAAATABsAAQAOAAIAAAASABsAAQAOAAIAAAARABsAAQAOAAIAAAAQABsAAQAOAAIAAAAPABsAAQAOAAIAAAAOABsAAQAOAAIAAAANABsAAQAOAAIAAAAMABsAAQAOAAIAAAALABsAAQAOAAIAAAAKABsAAQAOAAIAAAAJABsAAQAOAAIAAAAIABsAAQAOAAIAAAAHABsAAQAOAAIAAAAGABsAAQAOAAIAAAAFABsAAQAOAAIAAAAEABsAAQAOAAIAAAADABoAAQANAAEAAAADABkAAQANAAEAAAADABgAAQANAAEAAAADABcAAQANAAEAAAADABYAAQANAAEAAAADABUAAQANAAEAAAADABQAAQANAAEAAAADABMAAQANAAEAAAADABIAAQANAAEAAAADABEAAQANAAEAAAADABAAAQANAAEAAAADAA8AAQANAAEAAAADAA4AAQANAAEAAAADAA0AAQANAAEAAAADAAwAAQANAAEAAAADAAsAAQANAAEAAAADAAoAAQANAAEAAAADAAkAAQANAAEAAAADAAgAAQANAAEAAAADAAcAAQANAAEAAAADAAYAAQANAAEAAAADAAUAAQANAAEAAAADAAQAAQANAAEAAAAbABsAAQAPAAIAAAADABsAAQANAAIAAAA=")
tile_set = ExtResource("4_xxtbc")
metadata/_edit_lock_ = true

[node name="Floor" type="TileMapLayer" parent="." unique_id=382746693]
z_index = -1
tile_map_data = PackedByteArray("AAAOAA0AAQAAAAAAAAAOAA4AAQAAAAAAAAAOAA8AAQAAAAAAAAAPAA0AAQAAAAAAAAAPAA4AAQAAAAAAAAAPAA8AAQAAAAAAAAAOABAAAQAAAAAAAAAPABAAAQAAAAAAAAAQABAAAQAAAAAAAAAQAA0AAQAAAAAAAAAQAA4AAQAAAAAAAAAQAA8AAQAAAAAAAAANAA0AAQAAAAAAAAANAA4AAQAAAAAAAAANAA8AAQAAAAAAAAANABAAAQAAAAAAAAANABEAAQAAAAAAAAAOABEAAQAAAAAAAAAPABEAAQAAAAAAAAAQABEAAQAAAAAAAAARAA0AAQAAAAAAAAARAA4AAQAAAAAAAAARAA8AAQAAAAAAAAARABAAAQAAAAAAAAARABEAAQAAAAAAAAAMAAwAAQAAAAAAAAAMAA0AAQAAAAAAAAAMAA4AAQAAAAAAAAAMAA8AAQAAAAAAAAAMABAAAQAAAAAAAAAMABEAAQAAAAAAAAAMABIAAQAAAAAAAAANAAwAAQAAAAAAAAANABIAAQAAAAAAAAAOAAwAAQAAAAAAAAAOABIAAQAAAAAAAAAPAAwAAQAAAAAAAAAPABIAAQAAAAAAAAAQAAwAAQAAAAAAAAAQABIAAQAAAAAAAAARAAwAAQAAAAAAAAARABIAAQAAAAAAAAASAAwAAQAAAAAAAAASAA0AAQAAAAAAAAASAA4AAQAAAAAAAAASAA8AAQAAAAAAAAASABAAAQAAAAAAAAASABEAAQAAAAAAAAASABIAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAALAA0AAQAAAAAAAAALAA4AAQAAAAAAAAALAA8AAQAAAAAAAAALABAAAQAAAAAAAAALABEAAQAAAAAAAAALABIAAQAAAAAAAAALABMAAQAAAAAAAAAMAAsAAQAAAAAAAAAMABMAAQAAAAAAAAANAAsAAQAAAAAAAAANABMAAQAAAAAAAAAOAAsAAQAAAAAAAAAOABMAAQAAAAAAAAAPAAsAAQAAAAAAAAAPABMAAQAAAAAAAAAQAAsAAQAAAAAAAAAQABMAAQAAAAAAAAARAAsAAQAAAAAAAAARABMAAQAAAAAAAAASAAsAAQAAAAAAAAASABMAAQAAAAAAAAATAAsAAQAAAAAAAAATAAwAAQAAAAAAAAATAA0AAQAAAAAAAAATAA4AAQAAAAAAAAATAA8AAQAAAAAAAAATABAAAQAAAAAAAAATABEAAQAAAAAAAAATABIAAQAAAAAAAAATABMAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAQAAAAAAAAAKAA0AAQAAAAAAAAAKAA4AAQAAAAAAAAAKAA8AAQAAAAAAAAAKABAAAQAAAAAAAAAKABEAAQAAAAAAAAAKABIAAQAAAAAAAAAKABMAAQAAAAAAAAAKABQAAQAAAAAAAAALAAoAAQAAAAAAAAALABQAAQAAAAAAAAAMAAoAAQAAAAAAAAAMABQAAQAAAAAAAAANAAoAAQAAAAAAAAANABQAAQAAAAAAAAAOAAoAAQAAAAAAAAAOABQAAQAAAAAAAAAPAAoAAQAAAAAAAAAPABQAAQAAAAAAAAAQAAoAAQAAAAAAAAAQABQAAQAAAAAAAAARAAoAAQAAAAAAAAARABQAAQAAAAAAAAASAAoAAQAAAAAAAAASABQAAQAAAAAAAAATAAoAAQAAAAAAAAATABQAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAAAAAAUAAwAAQAAAAAAAAAUAA0AAQAAAAAAAAAUAA4AAQAAAAAAAAAUAA8AAQAAAAAAAAAUABAAAQAAAAAAAAAUABEAAQAAAAAAAAAUABIAAQAAAAAAAAAUABMAAQAAAAAAAAAUABQAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAQAAAAAAAAAJAA8AAQAAAAAAAAAJABAAAQAAAAAAAAAJABEAAQAAAAAAAAAJABIAAQAAAAAAAAAJABMAAQAAAAAAAAAJABQAAQAAAAAAAAAJABUAAQAAAAAAAAAKAAkAAQAAAAAAAAAKABUAAQAAAAAAAAALAAkAAQAAAAAAAAALABUAAQAAAAAAAAAMAAkAAQAAAAAAAAAMABUAAQAAAAAAAAANAAkAAQAAAAAAAAANABUAAQAAAAAAAAAOAAkAAQAAAAAAAAAOABUAAQAAAAAAAAAPAAkAAQAAAAAAAAAPABUAAQAAAAAAAAAQAAkAAQAAAAAAAAAQABUAAQAAAAAAAAARAAkAAQAAAAAAAAARABUAAQAAAAAAAAASAAkAAQAAAAAAAAASABUAAQAAAAAAAAATAAkAAQAAAAAAAAATABUAAQAAAAAAAAAUAAkAAQAAAAAAAAAUABUAAQAAAAAAAAAVAAkAAQAAAAAAAAAVAAoAAQAAAAAAAAAVAAsAAQAAAAAAAAAVAAwAAQAAAAAAAAAVAA0AAQAAAAAAAAAVAA4AAQAAAAAAAAAVAA8AAQAAAAAAAAAVABAAAQAAAAAAAAAVABEAAQAAAAAAAAAVABIAAQAAAAAAAAAVABMAAQAAAAAAAAAVABQAAQAAAAAAAAAVABUAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAwAAQAAAAAAAAAIAA0AAQAAAAAAAAAIAA4AAQAAAAAAAAAIAA8AAQAAAAAAAAAIABAAAQAAAAAAAAAIABEAAQAAAAAAAAAIABIAAQAAAAAAAAAIABMAAQAAAAAAAAAIABQAAQAAAAAAAAAIABUAAQAAAAAAAAAIABYAAQAAAAAAAAAJAAgAAQAAAAAAAAAJABYAAQAAAAAAAAAKAAgAAQAAAAAAAAAKABYAAQAAAAAAAAALAAgAAQAAAAAAAAALABYAAQAAAAAAAAAMAAgAAQAAAAAAAAAMABYAAQAAAAAAAAANAAgAAQAAAAAAAAANABYAAQAAAAAAAAAOAAgAAQAAAAAAAAAOABYAAQAAAAAAAAAPAAgAAQAAAAAAAAAPABYAAQAAAAAAAAAQAAgAAQAAAAAAAAAQABYAAQAAAAAAAAARAAgAAQAAAAAAAAARABYAAQAAAAAAAAASAAgAAQAAAAAAAAASABYAAQAAAAAAAAATAAgAAQAAAAAAAAATABYAAQAAAAAAAAAUAAgAAQAAAAAAAAAUABYAAQAAAAAAAAAVAAgAAQAAAAAAAAAVABYAAQAAAAAAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAAAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAAAAAAWAA4AAQAAAAAAAAAWAA8AAQAAAAAAAAAWABAAAQAAAAAAAAAWABEAAQAAAAAAAAAWABIAAQAAAAAAAAAWABMAAQAAAAAAAAAWABQAAQAAAAAAAAAWABUAAQAAAAAAAAAWABYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAHAA0AAQAAAAAAAAAHAA4AAQAAAAAAAAAHAA8AAQAAAAAAAAAHABAAAQAAAAAAAAAHABEAAQAAAAAAAAAHABIAAQAAAAAAAAAHABMAAQAAAAAAAAAHABQAAQAAAAAAAAAHABUAAQAAAAAAAAAHABYAAQAAAAAAAAAHABcAAQAAAAAAAAAIAAcAAQAAAAAAAAAIABcAAQAAAAAAAAAJAAcAAQAAAAAAAAAJABcAAQAAAAAAAAAKAAcAAQAAAAAAAAAKABcAAQAAAAAAAAALAAcAAQAAAAAAAAALABcAAQAAAAAAAAAMAAcAAQAAAAAAAAAMABcAAQAAAAAAAAANAAcAAQAAAAAAAAANABcAAQAAAAAAAAAOAAcAAQAAAAAAAAAOABcAAQAAAAAAAAAPAAcAAQAAAAAAAAAPABcAAQAAAAAAAAAQAAcAAQAAAAAAAAAQABcAAQAAAAAAAAARAAcAAQAAAAAAAAARABcAAQAAAAAAAAASAAcAAQAAAAAAAAASABcAAQAAAAAAAAATAAcAAQAAAAAAAAATABcAAQAAAAAAAAAUAAcAAQAAAAAAAAAUABcAAQAAAAAAAAAVAAcAAQAAAAAAAAAVABcAAQAAAAAAAAAWAAcAAQAAAAAAAAAWABcAAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAAAAAAXAA0AAQAAAAAAAAAXAA4AAQAAAAAAAAAXAA8AAQAAAAAAAAAXABAAAQAAAAAAAAAXABEAAQAAAAAAAAAXABIAAQAAAAAAAAAXABMAAQAAAAAAAAAXABQAAQAAAAAAAAAXABUAAQAAAAAAAAAXABYAAQAAAAAAAAAXABcAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAGAA0AAQAAAAAAAAAGAA4AAQAAAAAAAAAGAA8AAQAAAAAAAAAGABAAAQAAAAAAAAAGABEAAQAAAAAAAAAGABIAAQAAAAAAAAAGABMAAQAAAAAAAAAGABQAAQAAAAAAAAAGABUAAQAAAAAAAAAGABYAAQAAAAAAAAAGABcAAQAAAAAAAAAGABgAAQAAAAAAAAAHAAYAAQAAAAAAAAAHABgAAQAAAAAAAAAIAAYAAQAAAAAAAAAIABgAAQAAAAAAAAAJAAYAAQAAAAAAAAAJABgAAQAAAAAAAAAKAAYAAQAAAAAAAAAKABgAAQAAAAAAAAALAAYAAQAAAAAAAAALABgAAQAAAAAAAAAMAAYAAQAAAAAAAAAMABgAAQAAAAAAAAANAAYAAQAAAAAAAAANABgAAQAAAAAAAAAOAAYAAQAAAAAAAAAOABgAAQAAAAAAAAAPAAYAAQAAAAAAAAAPABgAAQAAAAAAAAAQAAYAAQAAAAAAAAAQABgAAQAAAAAAAAARAAYAAQAAAAAAAAARABgAAQAAAAAAAAASAAYAAQAAAAAAAAASABgAAQAAAAAAAAATAAYAAQAAAAAAAAATABgAAQAAAAAAAAAUAAYAAQAAAAAAAAAUABgAAQAAAAAAAAAVAAYAAQAAAAAAAAAVABgAAQAAAAAAAAAWAAYAAQAAAAAAAAAWABgAAQAAAAAAAAAXAAYAAQAAAAAAAAAXABgAAQAAAAAAAAAYAAYAAQAAAAAAAAAYAAcAAQAAAAAAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAAAAAAYAA4AAQAAAAAAAAAYAA8AAQAAAAAAAAAYABAAAQAAAAAAAAAYABEAAQAAAAAAAAAYABIAAQAAAAAAAAAYABMAAQAAAAAAAAAYABQAAQAAAAAAAAAYABUAAQAAAAAAAAAYABYAAQAAAAAAAAAYABcAAQAAAAAAAAAYABgAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAFAA0AAQAAAAAAAAAFAA4AAQAAAAAAAAAFAA8AAQAAAAAAAAAFABAAAQAAAAAAAAAFABEAAQAAAAAAAAAFABIAAQAAAAAAAAAFABMAAQAAAAAAAAAFABQAAQAAAAAAAAAFABUAAQAAAAAAAAAFABYAAQAAAAAAAAAFABcAAQAAAAAAAAAFABgAAQAAAAAAAAAFABkAAQAAAAAAAAAGAAUAAQAAAAAAAAAGABkAAQAAAAAAAAAHAAUAAQAAAAAAAAAHABkAAQAAAAAAAAAIAAUAAQAAAAAAAAAIABkAAQAAAAAAAAAJAAUAAQAAAAAAAAAJABkAAQAAAAAAAAAKAAUAAQAAAAAAAAAKABkAAQAAAAAAAAALAAUAAQAAAAAAAAALABkAAQAAAAAAAAAMAAUAAQAAAAAAAAAMABkAAQAAAAAAAAANAAUAAQAAAAAAAAANABkAAQAAAAAAAAAOAAUAAQAAAAAAAAAOABkAAQAAAAAAAAAPAAUAAQAAAAAAAAAPABkAAQAAAAAAAAAQAAUAAQAAAAAAAAAQABkAAQAAAAAAAAARAAUAAQAAAAAAAAARABkAAQAAAAAAAAASAAUAAQAAAAAAAAASABkAAQAAAAAAAAATAAUAAQAAAAAAAAATABkAAQAAAAAAAAAUAAUAAQAAAAAAAAAUABkAAQAAAAAAAAAVAAUAAQAAAAAAAAAVABkAAQAAAAAAAAAWAAUAAQAAAAAAAAAWABkAAQAAAAAAAAAXAAUAAQAAAAAAAAAXABkAAQAAAAAAAAAYAAUAAQAAAAAAAAAYABkAAQAAAAAAAAAZAAUAAQAAAAAAAAAZAAYAAQAAAAAAAAAZAAcAAQAAAAAAAAAZAAgAAQAAAAAAAAAZAAkAAQAAAAAAAAAZAAoAAQAAAAAAAAAZAAsAAQAAAAAAAAAZAAwAAQAAAAAAAAAZAA0AAQAAAAAAAAAZAA4AAQAAAAAAAAAZAA8AAQAAAAAAAAAZABAAAQAAAAAAAAAZABEAAQAAAAAAAAAZABIAAQAAAAAAAAAZABMAAQAAAAAAAAAZABQAAQAAAAAAAAAZABUAAQAAAAAAAAAZABYAAQAAAAAAAAAZABcAAQAAAAAAAAAZABgAAQAAAAAAAAAZABkAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAEAA0AAQAAAAAAAAAEAA4AAQAAAAAAAAAEAA8AAQAAAAAAAAAEABAAAQAAAAAAAAAEABEAAQAAAAAAAAAEABIAAQAAAAAAAAAEABMAAQAAAAAAAAAEABQAAQAAAAAAAAAEABUAAQAAAAAAAAAEABYAAQAAAAAAAAAEABcAAQAAAAAAAAAEABgAAQAAAAAAAAAEABkAAQAAAAAAAAAEABoAAQAAAAAAAAAFAAQAAQAAAAAAAAAFABoAAQAAAAAAAAAGAAQAAQAAAAAAAAAGABoAAQAAAAAAAAAHAAQAAQAAAAAAAAAHABoAAQAAAAAAAAAIAAQAAQAAAAAAAAAIABoAAQAAAAAAAAAJAAQAAQAAAAAAAAAJABoAAQAAAAAAAAAKAAQAAQAAAAAAAAAKABoAAQAAAAAAAAALAAQAAQAAAAAAAAALABoAAQAAAAAAAAAMAAQAAQAAAAAAAAAMABoAAQAAAAAAAAANAAQAAQAAAAAAAAANABoAAQAAAAAAAAAOAAQAAQAAAAAAAAAOABoAAQAAAAAAAAAPAAQAAQAAAAAAAAAPABoAAQAAAAAAAAAQAAQAAQAAAAAAAAAQABoAAQAAAAAAAAARAAQAAQAAAAAAAAARABoAAQAAAAAAAAASAAQAAQAAAAAAAAASABoAAQAAAAAAAAATAAQAAQAAAAAAAAATABoAAQAAAAAAAAAUAAQAAQAAAAAAAAAUABoAAQAAAAAAAAAVAAQAAQAAAAAAAAAVABoAAQAAAAAAAAAWAAQAAQAAAAAAAAAWABoAAQAAAAAAAAAXAAQAAQAAAAAAAAAXABoAAQAAAAAAAAAYAAQAAQAAAAAAAAAYABoAAQAAAAAAAAAZAAQAAQAAAAAAAAAZABoAAQAAAAAAAAAaAAQAAQAAAAAAAAAaAAUAAQAAAAAAAAAaAAYAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAAAAAAaAAwAAQAAAAAAAAAaAA0AAQAAAAAAAAAaAA4AAQAAAAAAAAAaAA8AAQAAAAAAAAAaABAAAQAAAAAAAAAaABEAAQAAAAAAAAAaABIAAQAAAAAAAAAaABMAAQAAAAAAAAAaABQAAQAAAAAAAAAaABUAAQAAAAAAAAAaABYAAQAAAAAAAAAaABcAAQAAAAAAAAAaABgAAQAAAAAAAAAaABkAAQAAAAAAAAAaABoAAQAAAAAAAAA=")
tile_set = ExtResource("4_xxtbc")
metadata/_edit_lock_ = true

[node name="BottomDoor" parent="." unique_id=1345941613 instance=ExtResource("3_y5uxw")]
position = Vector2(124, 223)
rotation = 3.1415927
direction = Vector2i(0, 1)

[node name="RightDoor" parent="." unique_id=1036421235 instance=ExtResource("3_y5uxw")]
position = Vector2(224, 125)
rotation = 1.5707964
direction = Vector2i(1, 0)

[node name="LeftDoor" parent="." unique_id=845509414 instance=ExtResource("3_y5uxw")]
position = Vector2(24, 125)
rotation = 4.712389
direction = Vector2i(-1, 0)

[node name="TopDoor" parent="." unique_id=188844151 instance=ExtResource("3_y5uxw")]
position = Vector2(124, 25)
direction = Vector2i(0, -1)
